methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:11: error: not found: value color
    marquer(color.yellow)
            ^FlowerPot:33: error: not found: value color
  flowers(color.red)
          ^FlowerPot:35: error: not found: value color
  flowers(color.orange)
          ^FlowerPot:37: error: not found: value color
  flowers(color.green)
          ^FlowerPot:39: error: not found: value color
  flowers(color.cyan)
          ^FlowerPot:41: error: not found: value color
  flowers(color.pink);recule(2)
          ^